Change to use Client.target(URI) to be compatible with JAX-RS 1.0